--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vercel-build": "expo export"
   },
   "dependencies": {
+    "@animatereactnative/marquee": "^0.5.2",
+    "@animatereactnative/stagger": "^0.3.0",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
