--- a/app.json
+++ b/app.json
@@ -23,7 +23,8 @@
     },
     "web": {
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/favicon.png",
+      "indexHtml": "./web/index.html"
     },
     "plugins": [
       "expo-router",
